// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RadioButtonGroup should apply switchDirection and direction props 1`] = `
<Component
  className="some-class"
  direction="column"
  switchDirection="medium"
>
  <Component
    key=".0"
    shrink={true}
  >
    <RadioButton
      checked={true}
      label="label 1"
      name="name"
      onChange={[Function]}
      value="one"
    />
  </Component>
  <Component
    key=".1"
    shrink={true}
  >
    <RadioButton
      checked={false}
      label="label 2"
      name="name"
      onChange={[Function]}
      value="two"
    />
  </Component>
</Component>
`;

exports[`RadioButtonGroup should match the snapshot 1`] = `
<Component
  className="some-class"
  direction="row"
>
  <Component
    key=".0"
    shrink={true}
  >
    <RadioButton
      checked={true}
      label="label 1"
      name="name"
      onChange={[Function]}
      value="one"
    />
  </Component>
  <Component
    key=".1"
    shrink={true}
  >
    <RadioButton
      checked={false}
      label="label 2"
      name="name"
      onChange={[Function]}
      value="two"
    />
  </Component>
</Component>
`;
